<resources>
    <string name="app_name">Remind Me</string>
    <string name="home_page">Your To-Do\'s</string>
    <string name="add_button">Add</string>
    <string name="settings_button">Settings</string>
    <string name="task_hint">Task name</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="todos">To-Do\'s</string>
    <string name="undo">Undo</string>
    <string name="onboarding_1_title">Welcome to Remind Me!</string>
    <string name="onboarding_1_desc">With Remind Me, you\'re closer to your dreams! You\'ll not forget your tasks and be organised like you\'ve never been.</string>
    <string name="onboarding_2_title">Be Punctual!</string>
    <string name="onboarding_2_desc">Set the time you should be warned to do your task and here you go!</string>
    <string name="onboarding_3_title">Build A Streak!</string>
    <string name="onboarding_3_desc">Build a streak when you mark your tasks done and see them in a report!</string>
    <string name="onboarding_4_title">Get notified!</string>
    <string name="onboarding_4_desc">Get notified when it\'s time to do your task! Notification permissions are required for getting post notifications.</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="enter_a_password">Create a password:</string>
    <string name="enter_your_password">Enter your password:</string>
    <string name="enter_again">Enter again:</string>
    <string name="try_again">Try again:</string>
    <string name="seconds">seconds</string>
    <string name="countdown_format" translatable="false">%d %s</string>
    <string name="password_created">Created password: %s</string>
    <string name="reset_password">Reset my password</string>
    <string name="change_password">Change my password</string>
    <string name="enter_new_password">Enter your new password:</string>
    <string name="cant_be_same">Enter a different password:</string>
    <string name="success">Success.</string>
    <string name="secure">Protect with a password</string>
    <string name="lock_icon">Lock icon</string>
    <string name="security_type">Security type:</string>
    <string name="bio_icon">Biometric icon</string>
    <string name="password_icon">Password icon</string>
    <string name="biometrics">Biometric</string>
    <string name="password">Password</string>
    <string name="security">Security</string>
    <string name="biometrics_desc">Use your biometric data to lock/unlock the app. This increases the security.</string>
    <string name="password_desc">Use a password to lock/unlock the app. This increases the security.</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="biometric_auth">Biometric Authentication</string>
    <string name="log_in_with_biometric">Use your biometric data to unlock the app.</string>
    <string name="cancel">Cancel</string>
    <string name="already_set">Another security method is already set.</string>
    <string name="set_reminder">Set reminder</string>
    <string name="reminder">Reminder</string>
    <string name="its_time">It\'s time to do your task.</string>
    <string name="expand">Expand</string>
    <string name="txt_error_post_notification">Please grant notification permission from app settings.</string>
    <string name="goto_settings">Go to Settings</string>
    <string name="enter_a_date">Please set date and time for reminder.</string>
    <string name="task_cannot_be_empty">Task name cannot be empty.</string>
    <string name="file_icon">File icon</string>
    <string name="notification_icon">Notification icon</string>
    <string name="alarm_icon">Alarm icon</string>
    <string name="app_icon">App icon</string>
    <string name="test">Test</string>
    <string name="reminder_time">Reminder Time</string>
    <string name="permissions_granted">Permissions granted!</string>
    <string name="backup_restore">Backup and Restore</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="backup_restore_desc">Backup your tasks and notes to internal storage. You can restore them from internal storage as well. Locked tasks will not be backed up unless they are unlocked due to security reasons.</string>
    <string name="permissions_denied">Permissions denied!</string>
    <string name="backup_successful">Backup successful!</string>
    <string name="restore_successful">Restore successful!</string>
    <string name="backup_failed">Backup failed</string>
    <string name="restore_failed">Restore failed</string>
    <string name="couldnt_create_file">Couldn\'t create file</string>
    <string name="couldnt_open_file">Couldn\'t open file</string>
    <string name="theme">Theme</string>
    <string name="theme_applied">Theme applied, please restart app for changes.</string>
    <string name="metallic_blue">Metallic blue</string>
    <string name="olive_green">Olive green</string>
    <string name="crimson">Crimson</string>
    <string name="amber">Amber</string>
    <string name="lilac">Lilac</string>
    <string-array name="themes">
        <item>@string/metallic_blue</item>
        <item>@string/olive_green</item>
        <item>@string/crimson</item>
        <item>@string/amber</item>
        <item>@string/lilac</item>
    </string-array>
    <string name="lock">Lock</string>
    <string name="change_reminder">Change reminder</string>
    <string name="password_cannot_be_empty">Password cannot be empty.\n</string>
    <string name="unlock">Unlock</string>
    <string name="wrong_password">Wrong password\n</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="failed_to_unlock">Failed to unlock</string>
    <string name="tips_icon">Tips icon</string>
    <string name="tips_security">Try increasing the security with several ways!</string>
    <string name="tips_themes">Make the app colorful with various themes!</string>
    <string name="tips_backup">Never lose your To-Do\'s with backups!</string>
    <string-array name="tips_array">
        <item>@string/tips_security</item>
        <item>@string/tips_themes</item>
        <item>@string/tips_backup</item>
    </string-array>
    <string name="locked">Locked</string>
    <string name="font">Font</string>
    <string name="default_font">Default</string>
    <string name="pacifico_font">Pacifico</string>
    <string-array name="font_array">
        <item>@string/default_font</item>
        <item>@string/pacifico_font</item>
    </string-array>
    <string-array name="priority_array">
        <item>@string/high</item>
        <item>@string/medium</item>
        <item>@string/low</item>
    </string-array>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="report">Report</string>
    <string name="created">Created</string>
    <string name="done">Done</string>
    <string name="since_app_installation">Since app installation</string>
    <string name="search">Search</string>
    <string name="add_task">Add Task</string>
    <string name="task_done">Task done</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="task_done_dialog">Is your task really done?</string>
    <string name="priority">Priority</string>
    <string name="x_text" translatable="false">x</string>
</resources>