<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/securityTypeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/security_type"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="?colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/passwordIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/password"
        android:src="@drawable/ic_password"
        app:tint="?colorAccent"
        app:layout_constraintTop_toBottomOf="@id/securityTypeText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/passwordTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:textColor="?colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/securityTypeText"
        app:layout_constraintStart_toEndOf="@id/passwordIcon" />

    <ImageView
        android:id="@+id/biometricIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/biometrics"
        android:src="@drawable/ic_fingerprint_button"
        app:tint="?colorAccent"
        app:layout_constraintTop_toBottomOf="@id/passwordIcon"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/biometricTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/biometrics"
        android:textColor="?colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/passwordTxt"
        app:layout_constraintStart_toEndOf="@id/biometricIcon" />
</androidx.constraintlayout.widget.ConstraintLayout>